Test Cases/DISNEY/NEGATIVE_TEST/D1_CX.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>D1_CX</name>
   <tag></tag>
   <comment></comment>
   <recordOption>OTHER</recordOption>
   <testCaseGuid>5476ea7c-5944-46e0-801c-2b5530fcdd7f</testCaseGuid>
</TestCaseEntity>
